feat: refactor check manager API

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -31,6 +31,7 @@ swagger.onboarding.pnPGInstitutions.model.externalId=Institution's unique extern
 swagger.onboarding.institutions.model.id=Institution's unique internal Id
 swagger.onboarding.institutions.model.name=Institution's legal name
 swagger.onboarding.institutions.model.users=List of onboarding users
+swagger.onboarding.institutions.model.userId=User's id
 swagger.onboarding.institutions.model.geographicTaxonomies=List of geographic Taxonomies
 swagger.onboarding.institutions.model.externalId=Institution's unique external identifier
 swagger.onboarding.institutions.model.address=Institution's physical address
