--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -61,6 +61,7 @@ swagger.onboarding.institutions.model.city=Institution's city
 swagger.onboarding.institutions.model.county=Institution's county
 swagger.onboarding.institutions.model.country=Institution's country
 swagger.onboarding.institutions.model.istatCode=Institution's istat code
+swagger.onboarding.institutions.model.atecoCodes=Institution's ateco codes
 swagger.onboarding.institutions.model.companyInformations=GPS, SCP, PT optional data
 swagger.onboarding.institutions.model.assistance=Institution's assistance contacts
 swagger.onboarding.institutions.model.pspData.businessRegisterNumber=PSP's Business Register number
