Added attr legalForm

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -124,6 +124,7 @@ swagger.onboarding.institutions.model.businesses=Legal Representative's institut
 swagger.onboarding.institutions.businessIc.model.businessName=Legal Representative's institutions name
 swagger.onboarding.institutions.businessIc.model.businessTaxId=Legal Representative's institutions tax ID
 swagger.onboarding.institutions.model.certified=Indicates whether the institution values come from INFOCAMERE (true) or MANUAL (false)
+swagger.onboarding.institutions.model.legalForm=Legal form of the legal representative
 swagger.model.certifiedField.certified=Indicates whether the value comes from a certified information source
 swagger.model.certifiedField.value=Field value
 swagger.tokens.verify=Verify if the token is already consumed
