--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -16,7 +16,7 @@ swagger.onboarding.institutions.api.onboardingUsersPg=The service allows the onb
 swagger.onboarding.institutions.api.onboarding.checkRecipientCode=The service allows to verify if recipientCode is valid or not
 swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
 swagger.onboarding.institutions.api.getInstitutionGeographicTaxonomy=The service retrieve the institution's geographic taxonomy
-swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user and product's identifier.  
+swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user and product's identifier.
 swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the onboarded institution given its external id
 swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified institution has been onboarded on the specified product.
 swagger.onboarding.institutions.api.checkOrganization=Checks if an institution has been already registered on the products backoffice
@@ -168,6 +168,7 @@ swagger.onboarding.institutions.model.aggregates=List of Aggregate Institutions,
 swagger.onboarding.institutions.model.isAggregator=specified if given institution is an Aggregator
 swagger.user.check-manager.model.result=Is the given user manager of the institution
 swagger.onboarding.institutions.model.payment=contains payment information
+swagger.onboarding.institutions.model.soleTrader=is true if institution is a sole trader
 swagger.onboarding.institutions.model.iban=Institution's IBAN
 swagger.onboarding.institutions.model.holder=IBAN's holder
 
