Added new endpoint to retrive onboardingId

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -20,6 +20,9 @@ swagger.onboarding.institutions.api.getInstitutions=The service retrieves all th
 swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the onboarded institution given its external id
 swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified institution has been onboarded on the specified product.
 swagger.onboarding.institutions.api.checkOrganization=Checks if an institution has been already registered on the products backoffice
+swagger.onboarding.institutions.api.onboardingInfo.summary=Retrieve onboarding information for an institution filtered by tax code and status
+swagger.onboarding.institutions.api.onboardingInfo.description=Returns a list of onboarding processes associated with the institution identified by the provided tax code. The results can be filtered by the onboarding status. Each item in the response contains key details such as the onboarding ID, related product, and current status.
+
 swagger.onboarding.pnPGInstitutions.api.onboarding=The service allows the onboarding of Users to a PN PG Institution
 swagger.onboarding.institutions.api.getInstitutionsByUser=Get Legal Representative's PN PG institution List
 swagger.onboarding.pnPGInstitutions.api.getInstitutionsByUser=Get Legal Representative's PN PG institution List
