--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -171,6 +171,7 @@ swagger.onboarding.institutions.model.aggregates=List of Aggregate Institutions,
 swagger.onboarding.institutions.model.isAggregator=specified if given institution is an Aggregator
 swagger.user.check-manager.model.result=Is the given user manager of the institution
 swagger.onboarding.institutions.model.payment=contains payment information
+swagger.onboarding.institutions.model.toAddOnAggregates=specified if should be added on aggregates
 swagger.onboarding.institutions.model.iban=Institution's IBAN
 swagger.onboarding.institutions.model.holder=IBAN's holder
 
