--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -144,6 +144,7 @@ swagger.tokens.approveOnboardingRequest=Service to approve a specific onboarding
 swagger.tokens.rejectOnboardingRequest=Service to reject a specific onboarding request
 swagger.tokens.getContract=Service to download a specific onboarding contract
 swagger.tokens.getAttachment=Service to download a specific onboarding attachment
+swagger.tokens.getTemplateAttachment=Service to download a specific template attachment
 swagger.tokens.getAggregatesCsv=Service to download a specific onboarding aggregates csv
 swagger.onboarding.institutions.model.dpoData=Data Protection Officer (DPO) specific data
 swagger.onboarding.institutions.model.dpoData.address=DPO's address
